# ros2-lerobot-swerve-platform

./: .gitignore  .mise.toml  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  MEMORY.md  README.md  ROADMAP.md  RTK_NOTES.md  pyproject.toml  scrape_capture.ndjson
.cursor/plans/: dns_and_ros2_hostname_migration_4e7f5368.plan.md
.cursor/rules/: commit-push-deploy.mdc  prefer-libraries.mdc  read-project-docs-first.mdc  ros2-no-placeholder-data.mdc  servo-debug-telemetry.mdc  servo-safety-gripper-only-tests.mdc  servo-safety-least-dramatic-tests.mdc
.github/workflows/: ci.yml
ansible/: .ansible-lint  README.md  ansible.cfg  inventory  inventory.example  site.yml
ansible/group_vars/: all.yml  client.yml  controller.yml  server.yml
ansible/playbooks/: client.yml  controller.yml  deploy_monitoring.yml  deploy_nodes_client.yml  deploy_nodes_server.yml  deploy_steamdeck_ui.yml  deploy_topic_scraper_client_config.yml  docker_cleanup.yml  optimize.yml  server.yml  site.yml
client/: README.md  docker-compose.yml
docs/diagrams/: architecture.puml  deployment.puml  topic_flow.puml
nodes/: README.md
nodes/bno055_imu/: Dockerfile  README.md  pyproject.toml
nodes/bno095_imu/: Dockerfile  README.md  pyproject.toml
nodes/bno095_imu/bno095_imu/: __init__.py  __main__.py  config.py  imu_msg.py  node.py
nodes/bno095_imu/tests/: __init__.py  test_config.py  test_imu_msg.py
nodes/bridges/: README.md
nodes/bridges/feetech_servos/: Dockerfile  README.md  __init__.py  __main__.py  bridge.py  command_mapping.py  config.py  joint_updates.py  kalman.py  leader_gripper_haptic_profile.json  pyproject.toml  registers.py  startup_torque.py  trajectory.py
nodes/bridges/feetech_servos/config/: follower.yaml  leader.yaml
nodes/bridges/feetech_servos/scripts/: calibrate_servos.py  set_servo_id.py
nodes/bridges/feetech_servos/tests/: __init__.py  conftest.py  test_bridge_startup_torque.py  test_calibrate_servos.py  test_command_mapping.py  test_config.py  test_joint_updates.py  test_kalman.py  test_registers.py  test_set_servo_id.py  test_trajectory.py
nodes/bridges/gps_rtk/: Dockerfile  README.md  pyproject.toml
nodes/bridges/gps_rtk/gps_rtk/: __init__.py  __main__.py  base_node.py  config.py  nmea_parser.py  ntrip_caster.py  ntrip_client.py  rover_node.py  rtcm3.py  serial_handler.py
nodes/bridges/gps_rtk/tests/: test_config.py  test_nmea_parser.py  test_ntrip_caster.py  test_ntrip_client.py  test_serial_handler.py
nodes/bridges/uvc_camera/: Dockerfile  README.md  __init__.py  __main__.py  bridge.py  config.py  pyproject.toml
nodes/bridges/uvc_camera/tests/: __init__.py  test_config.py
nodes/filter_node/: Dockerfile  README.md  pyproject.toml
nodes/filter_node/filter_node/: __init__.py  __main__.py  config.py  node.py
nodes/filter_node/filter_node/algorithms/: __init__.py  base.py  kalman.py
nodes/filter_node/tests/: __init__.py  test_algorithms.py  test_arbitration.py  test_config.py
nodes/haptic_controller/: Dockerfile  README.md  pyproject.toml
nodes/haptic_controller/haptic_controller/: __init__.py  __main__.py  config.py  node.py  resistance.py
nodes/haptic_controller/tests/: test_config.py  test_node.py
nodes/lerobot_teleop/: Dockerfile  README.md  (+5 more)
nodes/master2master/: Dockerfile  README.md  config.example.yaml  pyproject.toml
nodes/master2master/master2master/: __init__.py  __main__.py  config.py  proxy.py
nodes/master2master/tests/: __init__.py  test_config.py  test_proxy.py
nodes/static_tf_publisher/: Dockerfile  README.md  pyproject.toml
nodes/static_tf_publisher/static_tf_publisher/: __init__.py  __main__.py  config.py  node.py
nodes/static_tf_publisher/tests/: __init__.py  test_config.py
nodes/steamdeck_ui/bridge/: __init__.py  bridge_server.py  config.py  msg_serializer.py  pyproject.toml
nodes/steamdeck_ui/bridge/tests/: conftest.py  test_config.py  test_msg_serializer.py
nodes/swerve_drive_controller/: Dockerfile  README.md  pyproject.toml
nodes/swerve_drive_controller/swerve_drive_controller/: __init__.py  __main__.py  config.py  kinematics.py  node.py
nodes/swerve_drive_controller/tests/: __init__.py  test_config.py  test_kinematics.py
nodes/test_joint_api/: Dockerfile  README.md  pyproject.toml
nodes/test_joint_api/test_joint_api/: __init__.py  __main__.py  app.py  config.py  run.py
nodes/test_joint_api/tests/: __init__.py  test_app.py  test_config.py
nodes/web_ui/: Dockerfile  README.md  pyproject.toml
nodes/web_ui/config/: default.yaml
nodes/web_ui/frontend/: index.html  package-lock.json  package.json  vite.config.ts
nodes/web_ui/frontend/src/: App.tsx  index.css  logging.ts  types.ts
nodes/web_ui/frontend/src/components3d/: CostmapLayer.tsx  DepthMesh.tsx  InteractiveArm.tsx  LaserScanLayer.tsx  RobotModel.tsx  RobotScene.tsx  TFFrames.tsx  WheelYawMini.tsx  ccdIKSolver.ts
nodes/web_ui/frontend/src/hooks/: useRosBridge.ts
nodes/web_ui/frontend/src/overlays/: OverlayBar.tsx
nodes/web_ui/frontend/src/tabs/: CameraTab.tsx  EffectorGraphTab.tsx  ImuOrientationTab.tsx  NavGpsTab.tsx  NavLocalTab.tsx  RgbdCameraTab.tsx  RobotStatusTab.tsx  Scene3DTab.tsx  SensorGraphTab.tsx
nodes/web_ui/frontend/src/utils/: fieldExtract.ts  graphBuffers.ts
nodes/web_ui/tests/: __init__.py  conftest.py  test_bridge.py  test_config.py  test_msg_serializer.py  test_server.py  test_urdf_scanner.py
nodes/web_ui/urdf/: robot.urdf  so101_arm.urdf
nodes/web_ui/web_ui/: __init__.py  __main__.py  bridge.py  config.py  logging_setup.py  msg_serializer.py  server.py  urdf_scanner.py
scripts/: README.md  bno055_diag.sh  calibrate_rtk_base.py  capture_web_ui_screenshots.mjs  deploy-node.sh  deploy-nodes.sh  generate-diagrams.sh  joint_api_client.py  lint-all-nodes.sh  lint-ansible.sh  rtk_calibrate.sh  rtk_diag.sh  rtk_status.sh  rtk_verify.sh  run-pre-commit.sh  swerve_goal_relative.py  teleop_diag.sh  test_steamdeck_ui.sh  topic_scraper_collect.py
server/: README.md  docker-compose.yml
shared/: README.md
tests/: README.md  __init__.py  test_master2master_config.py  test_shared_utils.py  test_topic_scraper_collect.py
(+172 files in other folders)
