[tool.poetry]
name = "swerve_drive_controller"
version = "0.1.0"
description = "Swerve drive controller: cmd_vel to joint commands, FK/IK, odometry"
readme = "README.md"
packages = [{ include = "swerve_drive_controller", from = "." }]

[tool.poetry.dependencies]
python = "^3.11"
pyyaml = ">=6.0"
numpy = ">=1.26.0"

[tool.poetry.group.dev.dependencies]
flake8 = "^7.0.0"
black = "^24.0.0"
isort = "^5.13.0"
autoflake = "^2.3.1"
vulture = "^2.11"
poethepoet = "^0.42.0"
pytest = "^8.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120

[tool.isort]
profile = "black"
line_length = 120

[tool.flake8]
max-line-length = 120

[tool.vulture]
exclude = ["**/__pycache__"]
min_confidence = 80

[tool.poe.tasks]
lint = { shell = """
  set -e
  flake8 swerve_drive_controller
  black --check swerve_drive_controller tests
  isort --check swerve_drive_controller tests
  autoflake --check --recursive --remove-all-unused-imports --expand-star-imports --remove-unused-variables swerve_drive_controller tests
  vulture swerve_drive_controller tests --min-confidence 80
""" }
lint-fix = { shell = """
  black swerve_drive_controller tests
  isort swerve_drive_controller tests
  autoflake --in-place --recursive --remove-all-unused-imports --expand-star-imports --remove-unused-variables swerve_drive_controller tests
""" }
test = { shell = "pytest tests/ -v" }

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
