[tool.poetry]
name = "gps_rtk"
version = "0.1.0"
description = "GPS RTK bridge for LC29H-BS (base) and LC29H-DA (rover); publishes NavSatFix, streams RTCM3 over TCP"
readme = "README.md"
packages = [{ include = "gps_rtk", from = "." }]

[tool.poetry.dependencies]
python = "^3.11"
pyserial = ">=3.5"
pydantic = ">=2.0"
pyyaml = ">=6.0"

[tool.poetry.group.dev.dependencies]
flake8 = "^7.0.0"
black = "^24.0.0"
isort = "^5.13.0"
autoflake = "^2.3.1"
vulture = "^2.11"
poethepoet = "^0.42.0"
pytest = "^8.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120

[tool.isort]
profile = "black"
line_length = 120

[tool.flake8]
max-line-length = 120

[tool.vulture]
exclude = ["**/__pycache__"]
min_confidence = 80

[tool.poe.tasks]
lint = { shell = """
  set -e
  flake8 gps_rtk
  black --check gps_rtk tests
  isort --check gps_rtk tests
  autoflake --check --recursive --remove-all-unused-imports --expand-star-imports --remove-unused-variables gps_rtk tests
  vulture gps_rtk tests --min-confidence 80
""" }
lint-fix = { shell = """
  black gps_rtk tests
  isort gps_rtk tests
  autoflake --in-place --recursive --remove-all-unused-imports --expand-star-imports --remove-unused-variables gps_rtk tests
""" }
test = { shell = "pytest tests/ -v" }

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
